# hotel-ranking

./: .gitignore  LICENSE  Makefile  README.md  hotel_ranking_demo.ipynb  hotel_ranking_demo_databricks.py  hotel_ranking_demo_updated.ipynb  notes.txt  pyproject.toml  requirements.txt  run_pipeline.py  setup.py
src/data_generation/: interaction_data.py  main.py  seasonal_data.py  user_data.py  venue_data.py  weather_data.py
src/modeling/: evaluation.py  feature_engineering.py  model.py  train.py
src/utils/: distance.py  visualization.py
